--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.jared.synodroid"
-      android:versionCode="212"
-      android:versionName="2.1.2 Beta"
+      android:versionCode="2120"
+      android:versionName="2.1.2"
       android:installLocation="auto">
     
   <uses-sdk
