--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.jared.synodroid.ds"
       android:versionCode="2130"
-      android:versionName="2.1.3 Beta"
+      android:versionName="2.1.3"
       android:installLocation="auto">
     
   <uses-sdk
