--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.jared.synodroid.ds"
-      android:versionCode="2140"
-      android:versionName="2.1.4"
+      android:versionCode="2150"
+      android:versionName="2.1.5 Beta"
       android:installLocation="auto">
     
   <uses-sdk
