--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="org.jared.synodroid.ds"
     android:installLocation="auto"
     android:versionCode="2150"
-    android:versionName="2.1.5 Beta" >
+    android:versionName="2.1.5" >
 
     <uses-sdk
         android:minSdkVersion="4"
