--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.jared.synodroid.ds"
     android:installLocation="auto"
-    android:versionCode="2150"
-    android:versionName="2.1.5" >
+    android:versionCode="2200"
+    android:versionName="2.2 Beta" >
 
     <uses-sdk
         android:minSdkVersion="4"
