--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="org.jared.synodroid.ds"
     android:installLocation="auto"
     android:versionCode="2200"
-    android:versionName="2.2 Beta 2" >
+    android:versionName="2.2" >
 
     <uses-sdk
         android:minSdkVersion="4"
