--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="org.jared.synodroid.ds"
     android:installLocation="auto"
     android:versionCode="2200"
-    android:versionName="2.2" >
+    android:versionName="2.2.1 Beta" >
 
     <uses-sdk
         android:minSdkVersion="4"
@@ -33,7 +33,6 @@
             android:name=".ui.HomeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:launchMode="singleTask"
             android:theme="@style/Theme.Synodroid.Home" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -184,7 +183,16 @@
                     android:mimeType="application/x-bittorrent"
                     android:scheme="https" />
             </intent-filter>
-            <intent-filter>
+           <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:mimeType="application/x-bittorrent" />
+            </intent-filter>
+             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -223,6 +231,15 @@
                 <data
                     android:mimeType="application/x-nzb"
                     android:scheme="https" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:mimeType="application/x-nzb" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
