--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.jared.synodroid.ds"
     android:installLocation="auto"
-    android:versionCode="2200"
-    android:versionName="2.2.1 Beta" >
+    android:versionCode="2210"
+    android:versionName="2.2.1" >
 
     <uses-sdk
         android:minSdkVersion="4"
